@@ -1,6 +1,7 @@
 --------------------------
 Changes in 1.9 (not yet released)
 
+- IGUIListBox::setItemHeight now resets to automatic height with value 0. Also value is now serialized.
 - Several IMeshManipulator functions allow now using const IMesh* instead of insisting on non-const pointer
 - SpinBoxes can now also be created without buttons
 - Opening/closing sub-menus has now a delay. It can be controlled via IGUIEnvironment::setMenuShowDelay.
